@@ -1,3 +1,7 @@
+jolan - Fri Dec 17 2004
+	added visual feedback for volume setting in mp3 playback
+	added progress bar for mp3 playback
+
 Fredrik Bergholtz - Sun Dec 12 2004
 	added beta Asteroids clone (Steroids)
 
